--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,6 +8,7 @@
     <title>Timer</title>
   </head>
   <body>
+    <a href="./index.html">Go back</a>
     <section>
       <input type="text" id="datetime-picker" />
       <button type="button" data-start>Start</button>
