--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="./1-timer.html">Timer</a>
-    <script type="module" src="/main.js"></script>
+    <ul>
+      <li><a href="1-timer.html">Timer</a></li>
+      <li><a href="2-snackbar.html">Snackbar</a></li>
+    </ul>
   </body>
 </html>
