--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="1-timer.html">Timer</a></li>
-      <li><a href="2-snackbar.html">Snackbar</a></li>
-    </ul>
+    <load ="partials/header.html" />
   </body>
 </html>
